librenms/librenms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librenms
  namespace: librenms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librenms
  template:
    metadata:
      labels:
        app: librenms
    spec:
      containers:
      - name: librenms
        image: librenms/librenms:26.2.0
        ports:
        - containerPort: 8000
