librenms/librenms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librenms
  namespace: librenms
spec:
  selector:
    app: librenms
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
  type: NodePort
