librenms/service-librenms-poller.yaml
apiVersion: v1
kind: Service
metadata:
  name: librenms-poller
  namespace: librenms
spec:
  clusterIP: None
  selector:
    app: librenms-poller
