librenms/ingress-librenms.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librenms-ingress
  namespace: librenms
spec:
  ingressClassName: nginx
  rules:
    - host: librenms.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: librenms
                port:
                  number: 80
